# nlvr

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: shader_stage.frag  shader_stage.vert
src/: PhysicalDeviceMemoryProperties.json  lib.rs  main.rs  physpros.jsonc  planning.c
src/components/: renderable.rs  transform.rs
src/lib/: buffalloc.rs  buffer.rs  camera.rs  component.rs  context.rs  debug.rs  entity.rs  fs.rs  image.rs  inflightframedata.rs  material.rs  mesh.rs  pipeline.rs  queuefamilyindices.rs  reader.rs  renderable.rs  renderinstance.rs  shaders.rs  surface.rs  swapchain.rs  swapchainproperties.rs  swapchainsupportdetails.rs  swapvec.rs  syncobjects.rs  texture.rs  ubo.rs  utils.rs  vertex.rs  vulkan.rs  window.rs
src/lib/vulkan/: swapchain.rs
