[package]
name = "nlvr"
version = "0.0.1"
authors = ["Max Rink <mwjrink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32"
# vk-mem = "0.2.2" // this is VMA bindings
# winit = "0.24.0"
raw-window-handle = "0.3.3"

cgmath = "0.18.0"

ash-window = "0.6"
log = "0.4.11"
simple_logger = "1.9.0"
image = "0.23.9"
tobj = "2.0"

shrinkwraprs = "0.3.0"

galloc = { path = "../galloc" } # { git = "https://github.com/mwjrink/galloc", branch = "main" }

# cgmath = "0.17"
# image = "0.23"
# tobj = "2.0"